# Tech-challenge-step-1

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.py  mlruns.db  pipeline.py
src/data/: loader.py
src/models/: mlp.py  mlp_trainer.py  registry.py  trainer.py
src/notebooks/: demo.ipynb  eda.ipynb  etapa1_baselines.ipynb  etapa2_experimentos.ipynb  mlp_vs_baselines.ipynb
src/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/notebooks/catboost_info/learn/: events.out.tfevents
src/service/: mlflow_service.py
tests/: test_config.py  test_loader.py  test_mlflow_service.py  test_mlp.py  test_mlp_trainer.py  test_notebooks.py  test_pipeline.py  test_registry.py  test_schema.py  test_smoke.py  test_trainer.py
